--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,108 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+body {
+  font-family: 'Monserrat';
+  background-color: #fff;
+}
+
+.conteiner {
+  margin: auto;
+  max-width: 1440px;
+  height: 848px;
+}
+
+h1 {
+  color: #e7e7ef;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.3em;
+  letter-spacing: 0.4px;
+}
+
+h2 {
+  color: #e6e6ea;
+  font-family: Montserrat;
   font-size: 16px;
-  line-height: 24px;
+  font-style: normal;
   font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.04px;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+ul {
+  list-style: none;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.form {
+  margin: 28px 188px;
+  display: flex;
+  gap: 8px;
+}
+
+.text-form {
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+  background: #fff;
+  padding: 8px 16px;
+}
+
+.text-form:hover {
+  border-color: #6c8cff;
+  cursor: pointer;
+}
+
+.text-form:focus {
+  border-color:#6c8cff;
+}
+
+#placeholder {
+  font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #808080;
+    padding-left: 16px;
+}
+
+.button {
+  border-radius: 8px;
+    padding: 8px 16px;
+    width: 75px;
+    height: 40px;
+    background: #4e75ff;
+    color: #fff;
+    border: none;
+}
+
+.button:hover {
+  background: #6c8cff;
+  
 }
