--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,14 +49,15 @@ h2 {
   letter-spacing: 0.04px;
 }
 
-ul {
+ul, li {
   list-style: none;
 }
 
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 
 .form {
@@ -105,4 +106,39 @@ img {
 .button:hover {
   background: #6c8cff;
   
+}
+
+.gallery {
+  width: 1128px;
+    height: 200px
+}
+
+.gallery-cards {
+  display: flex;
+  flex-wrap: wrap;
+    gap: 24px;
+    background: #FFF;
+}
+
+.img-card {
+  width: 360px;
+}
+
+.gallery-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.gallery-link {}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
+}
+
+.item-text {
+  border-color: #f9f5f5ed;
+  font-size: 14px;
+  display: inline;
 }
